--- a/Extension-Files/code1.css
+++ b/Extension-Files/code1.css
@@ -84,11 +84,11 @@ div.section.styleChooser .primaryContent{background-color:rgba(44,44,44,0.87)!im
 div.section.styleChooser .secondaryContent{background-color:#101010!important}
 div.section.styleChooser .sectionFooter{background-color:#111!important}
 div.mainText.secondaryContent{background-color:#121212!important}
-ul.tabs.mainTabs.Tabs{background:#141414!important;border-bottom:0!important; color:white !important}
+ul.tabs.mainTabs.Tabs{background:#121212!important;border-bottom:0!important; color:white !important}
 .tabs li a,.tabs.noLinks
 li{background-color:#101010!important; color: white !important; border: 1px solid #121212 !important}
 .tabs li a:after,.tabs.noLinks li:after{background-color:#101010!important}
-#profilePosts .primaryContent{background-color:#141414!important;border:0!important}
+#profilePosts .primaryContent{background-color:#111!important;border:0!important}
 div.mainProfileColumn{border-left:0!important}
 div.messageInfo .textCtrl{background-color:rgba(0,0,0,0.25)!important;border:0!important}
 div.tabLinks.membersTabLinks{background-color:#transparent!important}
@@ -196,13 +196,13 @@ div#calroot{background-color: #141414 !important; border: 1px solid #151515 !imp
 span.selectionControl.secondaryContent{background-color: #151515 !important; color: white !important}
 span.actionControl.sectionFooter{background-color: #141414 !important; color: white !important}
 em.userTitle span{background-color: #141414 !important}
-div.secondaryContent.pairsJustified{background-color:#141414 !important}
-.profilePage .mast .section.infoBlock{border: 1px solid #151515 !important}
-.profilePage .profileContent{background-color:#141414 !important}
+div.secondaryContent.pairsJustified{background-color:#111 !important}
+.profilePage .mast .section.infoBlock{border: 1px solid #121212 !important}
+.profilePage .profileContent{background-color:#111 !important}
 .profilePage .tabs.mainTabs li a{color: white !important; font-weight: normal !important; border: 1px solid #151515 !important}
 #jumpMenu div.secondaryContent{background-color:#1b1b1b !important; border: 1px solid #151515 !important}
-.profilePage .mainProfileColumn{background-color: #141414 !important}
-.profilePage .mast {background-color: #151515 !important}
+.profilePage .mainProfileColumn{background-color: #111 !important}
+.profilePage .mast {background-color: #111 !important}
 .profilePage .primaryUserBlock .userBlurb{color: white !important}
 .message .messageMeta .control{background-color: #131313 !important; border: 1px solid #121212 !important}
 span.pageNavHeader{color: white !important}
@@ -238,3 +238,6 @@ div.sectionFooter.overlayOnly{border-top:0px !important}
 #GFNNotification{background-color:#121212 !important}
 .dark_postrating_member td {border-style: hidden !important}
 #XenForo body div#GFNNotification {background-color: #121212 !important}
+#messageList div.avatarHolder{background-color: #111 !important}
+#messageList .mcPlayerMessage{background-color: #111 !important}
+.profilePage .primaryUserBlock h1{color: gray !important}
