--- a/Extension-Files/code1.css
+++ b/Extension-Files/code1.css
@@ -241,4 +241,4 @@ div.sectionFooter.overlayOnly{border-top:0px !important}
 #messageList div.avatarHolder{background-color: #111 !important}
 #messageList .mcPlayerMessage{background-color: #111 !important}
 .profilePage .primaryUserBlock h1{color: gray !important}
-#userBar .navTabs{background-color: #292929 !important}
+#userBar .navTabs{background-color: #1a1a1a !important}
