--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -4,3 +4,4 @@
 @import "{{ site.theme }}";
 body{background: #f5f6fa}
 body div#container{background: transparent !important}
+footer{display: none}
