--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,7 +1,7 @@
 ---
 ---
 
-@import "{{ site.theme }}";
+/*@import "{{ site.theme }}";
 body{background: #f5f6fa}
 body div#container{background: transparent !important}
-footer{display: none}
+footer{display: none}/*
