--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,1 +1,8 @@
 
+---
+---
+
+@import "{{ site.theme }}";
+body{background: #f5f6fa}
+body div#container{background: transparent !important}
+footer{display: none}
