--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -5,4 +5,4 @@
 @import "{{ site.theme }}";
 body{background: #f5f6fa}
 body div#container{background: transparent !important}
-footer{display: none !important}
+footer{display: none}
